030-software/fluxcd/apps/blocky/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: blocky
  labels:
    namespace: blocky
