030-software/fluxcd/apps/blocky/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blocky
  labels:
    app.kubernetes.io/name: blocky
  annotations:
    configmap.reloader.stakater.com/reload: config
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: blocky
  template:
    metadata:
      labels:
        app.kubernetes.io/name: blocky
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "4000"
    spec:
      dnsConfig:
        nameservers:
        - 1.1.1.1
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: blocky
          image: ghcr.io/0xerr0r/blocky:v0.35.0@sha256:4f165b63db0d76c96ecc47c7a8f57caeedc003a912bdce29abb0e283ce02e16b
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            capabilities:
              # add:
              #   - NET_BIND_SERVICE
              drop:
                - ALL
          ports:
            - name: dns-udp
              containerPort: 8053
              protocol: UDP
            - name: dns-tcp
              containerPort: 8053
              protocol: TCP
            - name: http
              containerPort: 8000
              protocol: TCP
            - name: doh
              containerPort: 8443
              protocol: TCP
            - name: dot-udp
              containerPort: 8853
              protocol: UDP
            - name: dot-tcp
              containerPort: 8853
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /app/config.yml
              subPath: config.yml
          startupProbe:
            failureThreshold: 30
            periodSeconds: 10
            tcpSocket:
              port: dns-tcp
          livenessProbe:
            tcpSocket:
              port: dns-tcp
          readinessProbe:
            tcpSocket:
              port: dns-tcp
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              memory: 2048Mi
      volumes:
        - name: config
          configMap:
            name: config
            defaultMode: 0644
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app.kubernetes.io/name
                  operator: In
                  values:
                  - blocky
              topologyKey: kubernetes.io/hostname
      tolerations:
        - key: "node.kubernetes.io/nuc"
          operator: "Exists"
          effect: "NoSchedule"
