030-software/fluxcd/apps/blocky/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: blocky-udp
  annotations:
    "lbipam.cilium.io/ips": "${subnet}.22"
    "lbipam.cilium.io/sharing-key": "dns"
  labels:
    app.kubernetes.io/name: blocky
    vlan: lb
spec:
  type: LoadBalancer
  externalTrafficPolicy: Cluster
  ports:
    - port: 53
      targetPort: dns-udp
      protocol: UDP
      name: dns-udp
    - port: 853
      targetPort: dot-udp
      protocol: UDP
      name: dot-udp
  selector:
    app.kubernetes.io/name: blocky
---
apiVersion: v1
kind: Service
metadata:
  name: blocky-tcp
  annotations:
    "lbipam.cilium.io/ips": "${subnet}.22"
    "lbipam.cilium.io/sharing-key": "dns"
  labels:
    app.kubernetes.io/name: blocky
    vlan: lb
spec:
  type: LoadBalancer
  externalTrafficPolicy: Cluster
  ports:
    - port: 53
      targetPort: dns-tcp
      protocol: TCP
      name: dns-tcp
    - port: 853
      targetPort: dot-tcp
      protocol: TCP
      name: dot-tcp
    - port: 443
      targetPort: doh
      protocol: TCP
      name: doh
  selector:
    app.kubernetes.io/name: blocky
---
apiVersion: v1
kind: Service
metadata:
  name: blocky-failover-udp
  annotations:
    "lbipam.cilium.io/ips": "${subnet}.23"
    "lbipam.cilium.io/sharing-key": "dnsFailOver"
  labels:
    app.kubernetes.io/name: blocky
    vlan: lb
spec:
  type: LoadBalancer
  externalTrafficPolicy: Cluster
  ports:
    - port: 53
      targetPort: dns-udp
      protocol: UDP
      name: dns-udp
    - port: 853
      targetPort: dot-udp
      protocol: UDP
      name: dot-udp
  selector:
    app.kubernetes.io/name: blocky
---
apiVersion: v1
kind: Service
metadata:
  name: blocky-failover-tcp
  annotations:
    "lbipam.cilium.io/ips": "${subnet}.23"
    "lbipam.cilium.io/sharing-key": "dnsFailOver"
  labels:
    app.kubernetes.io/name: blocky
    vlan: lb
spec:
  type: LoadBalancer
  externalTrafficPolicy: Cluster
  ports:
    - port: 53
      targetPort: dns-tcp
      protocol: TCP
      name: dns-tcp
    - port: 853
      targetPort: dot-tcp
      protocol: TCP
      name: dot-tcp
    - port: 443
      targetPort: doh
      protocol: TCP
      name: doh
  selector:
    app.kubernetes.io/name: blocky
---
apiVersion: v1
kind: Service
metadata:
  name: blocky
  labels:
    app.kubernetes.io/name: blocky
spec:
  type: ClusterIP
  ports:
    - port: 4000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: blocky
