030-software/fluxcd/apps/blocky/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: blocky
spec:
  hostnames:
  - blocky.${domain}
  parentRefs:
  - name: cilium
    namespace: cilium
  rules:
  - backendRefs:
    - name: blocky
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
